src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accept_s_Tax_Paid__c</fullName>
        <label>Accept&apos;s Tax Paid?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountAction__c</fullName>
        <label>Account Action</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountPositioning__c</fullName>
        <label>Account Positioning</label>
        <picklist>
            <picklistValues>
                <fullName>Mainstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountStyle__c</fullName>
        <label>Account Style</label>
        <picklist>
            <picklistValues>
                <fullName>New Style</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountTypeID__c</fullName>
        <label>Account Type ID</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Active__c</fullName>
        <description>This is used on the Integration to determine if the Account Owner is Active. When the Account Owner is Active, for related data such as Opportunities, set the Opportunity owner from the Account Owner. Else default to the logged in API user.</description>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the Account Owner an Active licensed user?</inlineHelpText>
        <label>Account Owner Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActivelyManaged__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Account actively managed by Beam Suntory?</inlineHelpText>
        <label>Actively Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BackBarMerchandising__c</fullName>
        <label>Back Bar Merchandising</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BartenderTools__c</fullName>
        <label>Bartender Tools</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BeamBarrels__c</fullName>
        <label>Beam Barrels</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BehindCounterMerchandising__c</fullName>
        <label>Behind Counter Merchandising</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BillTo__c</fullName>
        <label>Bill To #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BinsCounterUnits__c</fullName>
        <inlineHelpText>Are bins or counter units allowed?</inlineHelpText>
        <label>Bins / Counter Units</label>
        <picklist>
            <picklistValues>
                <fullName>Bins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BottleService__c</fullName>
        <inlineHelpText>Does the Account offer bottle service?</inlineHelpText>
        <label>Bottle Service</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BrandCategory__c</fullName>
        <label>Brand Category</label>
        <picklist>
            <controllingField>BrandPartnerType__c</controllingField>
            <picklistValues>
                <fullName>Bourbon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tequila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vodka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>World Whiskies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BrandPartnerType__c</fullName>
        <label>Brand Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard &amp; Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Registration_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brand Registration State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BrandedGlassware__c</fullName>
        <label>Branded Glassware</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BrandedSignage__c</fullName>
        <label>Branded Signage</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carrier_Broker_Contact_Information__c</fullName>
        <label>Carrier Broker Contact Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Carrier_Code__c</fullName>
        <label>Carrier Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Assignment_Notifications__c</fullName>
        <label>Case Assignment Notifications</label>
        <picklist>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Closed_Notifications__c</fullName>
        <label>Case Closed Notifications</label>
        <picklist>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Created_Notifications__c</fullName>
        <label>Case Created Notifications</label>
        <picklist>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CocktailLounge__c</fullName>
        <label>Cocktail Lounge</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CocktailMenu__c</fullName>
        <inlineHelpText>Does this Account have a cocktail menu?</inlineHelpText>
        <label>Cocktail Menu</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConceptOwner__c</fullName>
        <label>Concept Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoolerActivation__c</fullName>
        <label>Cooler Activation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CorporateAccountDescription__c</fullName>
        <label>Corporate Account Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorporateAccountID__c</fullName>
        <description>Used for integration purposes</description>
        <label>Corporate Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorporateAccountType__c</fullName>
        <label>Corporate Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TO BE DETERMINED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correspondence_CC_s__c</fullName>
        <label>Correspondence CC&apos;s</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CouldAccountDoBarrelProgram__c</fullName>
        <label>Could Account Do Barrel Program?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CounterActivity__c</fullName>
        <label>Counter Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display w/ product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signage/Wraps</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CraftCocktailScene__c</fullName>
        <label>Craft Cocktail Scene</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CrossMerchandisingAllowed__c</fullName>
        <inlineHelpText>Is cross merchandising with Beam products allowed?</inlineHelpText>
        <label>Cross Merchandising</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Beer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Food</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerLoyaltyPrograms__c</fullName>
        <label>Customer Loyalty Programs</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <inlineHelpText>Designated Marketing Area</inlineHelpText>
        <label>DMA</label>
        <picklist>
            <picklistValues>
                <fullName>ABILENE-SWEETWATER TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANY GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANY-SCHENECTADY-TROY NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBUQUERQUE-SANTA FE NM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALEXANDRIA LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALPENA MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMARILLO TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANCHORAGE AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLANTA GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUGUSTA GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTIN TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAKERSFIELD CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALTIMORE MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGOR ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATON ROUGE LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEAUMONT-PORT ARTHUR TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEND OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BILLINGS MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BILOXI-GULFPORT MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BINGHAMTON NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIRMINGHAM (ANNISTON TUSCALOOSA) AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLUEFIELD-BECKLEY-OAK HILL WV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOISE ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSTON (MANCHESTER) MA-NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOWLING GREEN KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUFFALO NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BURLINGTON-PLATTSBURGH VT-NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUTTE-BOZEMAN MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CASPER-RIVERTON WY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEDAR RAPIDS-WATERLOO &amp; DUBUQUE IA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DisplayPotential__c</fullName>
        <label>Display Potential</label>
        <picklist>
            <picklistValues>
                <fullName>Bin (1-3 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large (15+ phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (5-15 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small (3-5 phys cs)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DistributorLevel2__c</fullName>
        <label>Distributor Level 2</label>
        <picklist>
            <picklistValues>
                <fullName>Allan S Goodman Inc-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Other Distributors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athens-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B &amp; T-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badger - Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Brands-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brescome Barton Inc-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut Distributors Inc-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empire - Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fedway Associates Inc-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frank-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia Crown-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glazer-Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glazer-South Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hartley &amp; Parker Ltd-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizon - Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Johnson Bros-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knoxville Bev-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.S Walker-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Brands - Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phillips-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;R Marketing-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rndc - Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Distributors-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-Western</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DistributorLevel3__c</fullName>
        <label>Distributor Level 3</label>
        <picklist>
            <picklistValues>
                <fullName>Glazer-Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glazer-Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glazer-Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glazer-Ohio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glazer-Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hartley &amp; Parker Ltd-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizon - Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Johnson Bros-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knoxville Bev-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.S Walker-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Brands - Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phillips-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;R Marketing-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rndc - Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Distributors-Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-Metro Ny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-New Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-No California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-So California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sws-South Carolina</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DistributorLevel4__c</fullName>
        <label>Distributor Level 4</label>
        <picklist>
            <picklistValues>
                <fullName>Action Wholesale Liquor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Abc Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Crown (0000029070) - Birmingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Crown (0000040295)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Crown (0000040528) - Montgomery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Crown (0001136406) - Alabaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allan S Goodman Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associated (0000055592)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athens Distributing (Memphis)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athens Distributing (Nashville)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B &amp; T Distributing Co. Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badger North - Fond Du Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badger Wine &amp; Spirits Llc/Wi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baker Dist. Corp. (0000028813)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baker Distributing (0001136548)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bellboy Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bellboy Corporation (0001131833)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Brands Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bjt Inc (0000080057)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bjt Inc (0000080058)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boardwalk Distribution Company (0001136448)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brescome Barton Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capitol Distributing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carolina Wine Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Distributors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Liquor Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circle Sales Incorporated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut Distributors Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D &amp; V Distributing (0001145087)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dba Spirit Distributing Co.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DistributorMaster__c</fullName>
        <label>Distributor Master</label>
        <picklist>
            <picklistValues>
                <fullName>Allan S Goodman Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Other Distributors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B &amp; T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brescome Barton Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut Distributors Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fedway Associates Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia Crown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glazers Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hartley &amp; Parker Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Johnson Bros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knoxville Bev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.S Walker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phillips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;R Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RNDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Distributors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triple C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Tennessee Crown Distributing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wirtz</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Account Division.</description>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Central Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Coast Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Control Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mideast Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midsouth Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Coast Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Control Division</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>